# yula

./: .env.example  .gitignore  .lintstagedrc.mjs  AGENTS.md  RALPH_LOOP_PROMPT.md  biome.json  docker-compose.yml  package.json  start-ralph-loop.sh  tsconfig.json  turbo.json  vitest.workspace.ts
.claude/: ralph-loop.local.md
.github/workflows/: deploy-api.yml  deploy-convex.yml  deploy-web.yml  lint.yml  security.yml  test.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/api/: .env.example  package.json  tsconfig.json  vitest.config.ts
apps/api/convex/: accounts.ts  conversations.ts  memories.ts  messages.ts  schema.ts  sessions.ts  subscriptions.ts  tools.ts  users.ts
apps/api/convex/_generated/: api.d.ts  api.js  dataModel.d.ts  dataModel.js  server.d.ts  server.js
apps/api/src/: index.ts  test-helpers.ts  types.ts
apps/api/src/__mocks__/: convex-api.ts  convex-dataModel.ts
apps/api/src/lib/: auth.ts  convex.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: auth.ts  chat.test.ts  chat.ts  context.test.ts  context.ts  conversations.ts  (+6 more)
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/ios/YULA/: Info.plist  YULAApp.swift
apps/ios/YULA.xcodeproj/: project.pbxproj
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
tooling/tailwind/: preset.js
tooling/typescript/: base.json
(+72 files in other folders)
