[package]
name = "yula-desktop"
version = "0.0.1"
description = "YULA Desktop Application"
authors = ["YULA"]
edition = "2021"

[lib]
name = "yula_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
